<resources>
    <string name="app_name">FoodTruck</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Bt_Login">Login</string>
    <string name="Bt_LogOut">Log Out</string>
    <string name="Text_EditImage">Edit Image</string>
    <string name="Describe_Truck">Describe your Truck</string>
    <string name="My_Menu">My menu</string>
    <string name="Opening_hours">Opening Hours</string>
    <string name="Status">Status</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="label_From">From:</string>
    <string name="label_To">To:</string>
    <string name="Modify">Modify</string>
    <string name="label_Distance">Distance:</string>
    <string name="label_Time">Time:</string>
    <string name="label_Price">Price:</string>
    <string-array name="food_tags">
        <item>Desserts</item>
        <item>Smoothies</item>
        <item>Vegetarian</item>
        <item>Kebab</item>
        <item>Hotdog</item>
        <item>Pizza</item>
        <item>Japanese</item>
        <item>Sandwhiches</item>

    </string-array>
</resources>