<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".activities.MapsActivity">

    <TextView
        android:id="@+id/tv_From"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_From"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_From"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button"
        android:text="@string/Modify"
        android:textColor="#EF3D64"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordActI"
        app:layout_constraintVertical_bias="0.178" />
    <TextView
        android:id="@+id/tv_To"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_To"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_To"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button"
        android:text="@string/Modify"
        android:textColor="#EF3D64"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordActI"
        app:layout_constraintVertical_bias="0.178" />

    <!-- Travel info -->
    <TextView
        android:id="@+id/tv_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/label_Distance"
        />
    <TextView
        android:id="@+id/tv_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_Time"
        />
    <TextView
        android:id="@+id/tv_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_Price"
        />

    <!-- Map -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="418dp"
        tools:context=".activities.MapsActivity" />

    <!-- Button Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuBackground"
        app:itemIconTint="@color/navselector"
        app:itemTextColor="@color/navselector"
        app:layout_constraintBottom_toBottomOf="@id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

</LinearLayout>




